added styles and changes

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Welcome to My Website</h1>
-    <p>This is my homepage.</p>
+
+    <!-- Profile Image -->
+    <img src="images/me_pic.jpeg" alt="My Photo" width="200" />
+
+    <h2>About My Interests</h2>
+    <ul>
+      <li>Coding</li>
+      <li>Learning Instruments</li>
+      <li>Video Games</li>
+    </ul>
+
+    <h2>Favorite Website</h2>
+    <a href="https://example.com" target="_blank">Visit my favorite website</a>
+
+    <h2>More About Me</h2>
+    <p>Click below to learn more:</p>
     <a href="about.html">Go to About Me</a>
   </body>
 </html>
